# ghostwall

./: AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
api/: Cargo.toml
api/src/: handlers.rs  lib.rs  main.rs  state.rs
assets/: README.md
core/: Cargo.toml
core/src/: device.rs  error.rs  exposure.rs  fingerprint.rs  lib.rs  risk.rs
core/tests/: device_tests.rs  exposure_tests.rs  risk_tests.rs
dashboard/: index.html  package.json
dashboard/src/: App.tsx
dashboard/src/components/: Sidebar.tsx
dashboard/src/pages/: Alerts.tsx  Devices.tsx  ExposureMap.tsx  Overview.tsx  Reports.tsx  Settings.tsx  Threats.tsx
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  COMPLIANCE_CHECK.md  INSTALLATION.md  ROADMAP.md  THREAT_MODEL.md
mobile/: pubspec.yaml
mobile/lib/: main.dart
mobile/lib/providers/: device_provider.dart
mobile/lib/screens/: home_screen.dart
reporting/: Cargo.toml
reporting/src/: lib.rs
reporting/tests/: reporting_tests.rs
risk-engine/: Cargo.toml
risk-engine/src/: lib.rs
risk-engine/tests/: risk_engine_tests.rs
router-agent/: Cargo.toml
router-agent/src/: lib.rs  main.rs
scanner/: Cargo.toml
scanner/src/: discovery.rs  fingerprint.rs  lib.rs  linux.rs  macos.rs  windows.rs
storage/: Cargo.toml
storage/src/: exposure.rs  lib.rs  schema.rs
threat-intel/: Cargo.toml
threat-intel/src/: lib.rs
threat-intel/tests/: threat_intel_tests.rs
