[workspace]
members = [
    "core",
    "scanner",
    "risk-engine",
    "api",
    "storage",
    "reporting",
    "threat-intel",
    "router-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2026"
authors = ["GHOSTWALL Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/NaiCodeBr/ghostwall.git"
description = "Open Source RF Privacy Firewall"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
aes-gcm = "0.10"
ed25519-dalek = "2.0"
sha2 = "0.10"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
config = "0.14"
reqwest = { version = "0.11", features = ["json"] }
pnet = "0.34"
nix = "0.27"
rusqlite = "0.30"
