[package]
name = "ghostwall-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API for GHOSTWALL"

[dependencies]
ghostwall-core = { path = "../core" }
ghostwall-scanner = { path = "../scanner" }
ghostwall-risk-engine = { path = "../risk-engine" }
ghostwall-storage = { path = "../storage" }
ghostwall-reporting = { path = "../reporting" }
ghostwall-threat-intel = { path = "../threat-intel" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
