[package]
name = "ghostwall-risk-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RSIE Engine - RF Sensing Indicators of Exposure for GHOSTWALL"

[dependencies]
ghostwall-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
