[package]
name = "ghostwall-threat-intel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Threat Intelligence module for GHOSTWALL"

[dependencies]
ghostwall-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
chrono.workspace = true
